Act1 remodelado, entidade usuario emplementada;

--- a/app/src/main/res/layout/activity_main4_modulo.xml
+++ b/app/src/main/res/layout/activity_main4_modulo.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".Main4ActivityModulo"
+    tools:context=".activities.activities.Main4ActivityModulo"
     android:fillViewport="true">
 
     <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
