--- a/app/src/main/res/layout/activity_calcule_agora_inicio.xml
+++ b/app/src/main/res/layout/activity_calcule_agora_inicio.xml
@@ -4,13 +4,12 @@
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".CalculeAgoraInicioActivity"
+    tools:context=".activities.activities.CalculeAgoraInicioActivity"
     android:fillViewport="true">
 
     <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/holo_blue_dark"
         android:theme="@style/Base.Theme.AppCompat"
         app:layout_constraintBottom_toTopOf="@+id/EditAreadoModuloSolar"
         app:layout_constraintTop_toTopOf="@+id/EditAreadoModuloSolar">
@@ -18,15 +17,21 @@
 
         <Spinner
             android:id="@+id/spinnerModuloSolar"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="405dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
+            android:layout_width="160dp"
+            android:layout_height="50dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="8dp"
+            android:addStatesFromChildren="true"
+            android:background="?android:attr/actionModeBackground"
+            android:entries="@array/modulosSolares"
+            android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.047"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textTipo_do_modulo_solar" />
+            app:layout_constraintTop_toTopOf="@+id/guideline9"
+            app:layout_constraintVertical_bias="0.013"
+            tools:listitem="@layout/support_simple_spinner_dropdown_item" />
 
 
         <TextView
@@ -39,6 +44,7 @@
             android:layout_marginTop="8dp"
             android:text="@string/txtEscolhaEquipamentos"
             android:textAlignment="center"
+            android:textColor="@android:color/black"
             android:textSize="24sp"
             app:layout_constraintBottom_toTopOf="@+id/textTipo_do_modulo_solar"
             app:layout_constraintEnd_toEndOf="parent"
@@ -48,14 +54,12 @@
         <TextView
             android:id="@+id/textTipo_do_modulo_solar"
             android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginBottom="6dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="@string/txttipodoModuloSolar"
             android:textAlignment="viewStart"
             android:textColor="@android:color/black"
             android:textSize="18sp"
-            app:layout_constraintBottom_toTopOf="@+id/spinnerModuloSolar"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/guideline6" />
@@ -70,5 +74,12 @@
             app:layout_constraintBottom_toTopOf="@+id/textTipo_do_modulo_solar"
             app:layout_constraintGuide_percent="0.08"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <android.support.constraint.Guideline
+            android:id="@+id/guideline9"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_begin="84dp" />
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
