--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,182 +5,269 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.projetocpv.example.mateus2314.projetotcc_calculopv.MainActivity"
+    tools:context="com.projetocpv.example.mateus2314.projetotcc_calculopv.activities.activities.MainActivity"
     android:fillViewport="true">
-<RelativeLayout
 
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@android:color/holo_blue_dark"
-    android:theme="@style/Base.Theme.AppCompat">
+    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
-    <ImageView
-        android:id="@+id/imageView3"
-
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignTop="@+id/editTxtNome"
-        android:layout_marginStart="12dp"
-        app:srcCompat="@android:drawable/ic_menu_myplaces"
-        android:contentDescription="@string/app_name"/>
-
-    <TextView
-        android:id="@+id/titulo"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/editText4"
-        android:fontFamily="monospace"
-        android:text="@string/titulo_open_txt"
-        android:textAlignment="center"
-        android:textColor="@android:color/background_light"
-        android:textSize="30sp"
-        tools:ignore="UnknownId" />
+        android:theme="@style/Base.Theme.AppCompat">
 
-    <EditText
-        android:id="@+id/editTxtNome"
-        android:layout_width="250dp"
-        android:layout_height="50dp"
-        android:layout_below="@+id/titulo"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="27dp"
-        android:background="@android:color/darker_gray"
-        android:contentDescription="@string/nome_txt_open"
-        android:ems="10"
-        android:hint="@string/hint_nome_login"
-        android:inputType="textPersonName"
-        android:labelFor="@+id/editTxtNome"
-        android:singleLine="false"
-        android:textColor="@android:color/holo_green_dark"
-        android:visibility="visible"
-        tools:ignore="ContentDescription" />
+        <ImageView
+            android:id="@+id/ivfigure2"
+            android:layout_width="50dp"
+            android:layout_height="47dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignTop="@+id/editTxtNome"
+            android:contentDescription="@string/nome_txt_open"
+            android:scaleType="fitCenter"
+            app:layout_constraintBottom_toTopOf="@+id/guideline15"
+            app:layout_constraintEnd_toStartOf="@+id/guideline11"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/guideline14"
+            app:srcCompat="@android:drawable/ic_menu_myplaces"
+            tools:ignore="NotSibling" />
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignTop="@+id/editTxtNome"
-        android:layout_marginStart="12dp"
-        app:srcCompat="@android:drawable/ic_menu_myplaces"
-        android:contentDescription="@string/nome_txt_open"/>
+        <ImageView
+            android:id="@+id/iwfigure2"
+            android:layout_width="50dp"
+            android:layout_height="49dp"
+            android:layout_alignStart="@+id/imageView3"
+            android:layout_below="@+id/imageView3"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:contentDescription="@string/txt_open_padrao_entrada"
+            android:scaleType="centerCrop"
+            app:layout_constraintBottom_toTopOf="@+id/idtex_obs"
+            app:layout_constraintEnd_toStartOf="@+id/TextInputLayoutNome"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/guideline15"
+            app:srcCompat="@android:drawable/ic_menu_save"
+            tools:ignore="UnknownId" />
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignTop="@+id/editTxtNome"
-        android:layout_marginStart="12dp"
-        app:srcCompat="@android:drawable/ic_menu_myplaces"
-        android:contentDescription="@string/app_name"/>
+        <Button
+            android:id="@+id/btInversorAct1"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_alignEnd="@+id/action_bar"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:onClick="inversor"
+            android:text="@string/buttcadastrarInversor"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/guideline11"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/guideline10"
+            tools:ignore="UnknownId" />
 
-    <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_alignStart="@+id/imageView3"
-        android:layout_below="@+id/imageView3"
-        android:layout_marginTop="29dp"
-        app:srcCompat="@android:drawable/ic_menu_save"
-        android:contentDescription="@string/txt_open_padrao_entrada"/>
+        <Button
+            android:id="@+id/buttonCalculeAgora"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_alignTop="@+id/btInversorAct1"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:onClick="calculeAgora"
+            android:text="@string/txtCalculeAgora"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/guideline12"
+            app:layout_constraintTop_toTopOf="@+id/guideline10"
+            tools:ignore="UnknownId" />
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/radioGroupidentrada"
-        android:layout_alignStart="@+id/imageView4"
-        android:layout_marginBottom="14dp"
-        android:text="@string/txt_open_padrao_entrada"
-        android:textSize="18sp" />
+        <TextView
+            android:id="@+id/idtex_obs"
+            android:layout_width="0dp"
+            android:layout_height="19dp"
+            android:layout_alignStart="@+id/EditTxtContaLuz"
+            android:layout_below="@+id/EditTxtContaLuz"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:text="@string/txt_obs_open"
+            android:textAlignment="center"
+            android:textAppearance="@style/TextAppearance.AppCompat.Notification"
+            android:textColor="@color/colorAccent"
+            android:textSize="14sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/iwfigure2"
+            app:layout_constraintTop_toBottomOf="@+id/TextInputLayoutContaLuz"
+            tools:ignore="NotSibling,UnknownId" />
 
-    <RadioGroup
-        android:id="@+id/radioGroupidentrada"
-        android:layout_width="150dp"
-        android:layout_height="100dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="89dp"
-        android:orientation="vertical">
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/TextInputLayoutNome"
+            android:layout_width="0dp"
+            android:layout_height="57dp"
+            android:hint="@string/hint_nome_login"
+            android:textColorHint="@android:color/background_dark"
+            app:layout_constraintBottom_toTopOf="@+id/guideline15"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/ivfigure2"
+            app:layout_constraintTop_toTopOf="@+id/guideline14">
 
-        <RadioButton
-            android:id="@+id/radioMonofasico"
-            android:layout_width="match_parent"
+            <EditText
+                android:id="@+id/editTxtNome"
+
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/titulo"
+                android:layout_centerHorizontal="true"
+                android:layout_weight="1"
+                android:contentDescription="@string/nome_txt_open"
+                android:ems="10"
+                android:inputType="textPersonName"
+                android:labelFor="@+id/editTxtNome"
+                android:singleLine="false"
+                android:textColor="@android:color/holo_green_dark"
+                android:textColorHint="@color/colorPrimaryDark"
+                android:visibility="visible"
+                tools:ignore="ContentDescription"
+                tools:layout_editor_absoluteX="31dp"
+                tools:layout_editor_absoluteY="313dp" />
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/TextInputLayoutContaLuz"
+            android:layout_width="0dp"
+            android:layout_height="51dp"
+            android:hint="@string/hint_cont_login"
+            android:textColorHint="@android:color/black"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/iwfigure2"
+            app:layout_constraintTop_toTopOf="@+id/guideline15"
+            tools:ignore="MissingConstraints">
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignStart="@+id/editTxtNome"
+                android:layout_alignTop="@+id/iwfigure2"
+                android:layout_weight="1"
+                android:ems="10"
+                android:inputType="numberDecimal"
+                android:labelFor="@+id/EditTxtContaLuz"
+                android:textColor="@android:color/holo_green_dark"
+                android:textColorHint="@color/colorPrimary"
+                android:textSize="14sp"
+                tools:layout_editor_absoluteX="42dp"
+                tools:layout_editor_absoluteY="382dp" />
+
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/textInputLayout2"
+            android:layout_width="0dp"
+            android:layout_height="43dp"
+            android:hint="@string/digite_o_seu_e_mail"
+            android:textColorHint="@android:color/background_dark"
+            app:layout_constraintBottom_toTopOf="@+id/guideline16"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/guideline13"
+            app:layout_constraintVertical_bias="1.0">
+
+            <EditText
+                android:id="@+id/et_EmailAct1"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:layout_weight="1"
+                android:contentDescription="@string/digite_o_seu_e_mail"
+                android:ems="10"
+                android:inputType="textEmailAddress"
+                android:textColor="@android:color/holo_green_dark"
+                android:textColorHint="@color/colorPrimary" />
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.constraint.Guideline
+            android:id="@+id/guideline10"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/txt_padrao_entrada_mono" />
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.84" />
 
-        <RadioButton
-            android:id="@+id/RadioTrifas"
-            android:layout_width="match_parent"
+        <Button
+            android:id="@+id/btmodulos"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:onClick="modulo"
+            android:text="@string/txtButtonCadastroModulosSolares"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/guideline12"
+            app:layout_constraintStart_toStartOf="@+id/guideline11"
+            app:layout_constraintTop_toTopOf="@+id/guideline10"
+            app:layout_constraintVertical_bias="0.0" />
+
+        <android.support.constraint.Guideline
+            android:id="@+id/guideline11"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/txt_padrao_entrada_tri" />
-    </RadioGroup>
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.3333" />
 
-    <Button
-        android:id="@+id/botaoseguir1id"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="38dp"
-        android:layout_alignEnd="@+id/action_bar"
-        android:text="@string/botao_open_txt"
-        tools:ignore="UnknownId" />
+        <android.support.constraint.Guideline
+            android:id="@+id/guideline12"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.6666" />
 
-    <Button
-        android:id="@+id/buttonCalculeAgora"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/botaoseguir1id"
-        android:layout_centerHorizontal="true"
-        android:text="@string/txtCalculeAgora"
-        tools:ignore="UnknownId" />
+        <android.support.constraint.Guideline
+            android:id="@+id/guideline13"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.46" />
 
-    <EditText
-        android:id="@+id/EditTxtContaLuz"
-        android:layout_width="300dp"
-        android:layout_height="50sp"
-        android:layout_alignStart="@+id/editTxtNome"
-        android:layout_alignTop="@+id/imageView4"
-        android:background="@android:color/darker_gray"
-        android:ems="10"
-        android:hint="@string/hint_cont_login"
-        android:inputType="numberDecimal"
-        android:labelFor="@+id/EditTxtContaLuz"
-        android:textColor="@android:color/holo_green_dark"
-        android:textSize="14sp" />
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:scaleType="centerCrop"
+            app:layout_constraintBottom_toTopOf="@+id/guideline14"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/selecao002"
+            android:contentDescription="@string/todo" />
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/EditTxtContaLuz"
-        android:layout_below="@+id/EditTxtContaLuz"
-        android:text="@string/txt_obs_open"
-        android:textAlignment="center"
-        android:textAppearance="@style/TextAppearance.AppCompat.Notification"
-        android:textColor="@color/colorAccent"
-        android:textSize="14sp" />
+        <android.support.constraint.Guideline
+            android:id="@+id/guideline14"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.15" />
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/imageView3"
-        android:layout_alignStart="@+id/editTxtNome"
-        android:text="@string/nome_txt_open" />
+        <android.support.constraint.Guideline
+            android:id="@+id/guideline15"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.3" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/EditTxtContaLuz"
-        android:layout_alignStart="@+id/EditTxtContaLuz"
-        android:text="@string/txt_preco" />
+        <android.support.constraint.Guideline
+            android:id="@+id/guideline16"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.58" />
 
-</RelativeLayout>
+    </android.support.constraint.ConstraintLayout>
     </ScrollView>
