--- a/app/src/main/res/layout/activity_main3_activityinversor.xml
+++ b/app/src/main/res/layout/activity_main3_activityinversor.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.projetocpv.example.mateus2314.projetotcc_calculopv.Main2Activity_dados_inversor"
+    tools:context="com.projetocpv.example.mateus2314.projetotcc_calculopv.activities.activities.Main2Activity_dados_inversor"
     android:fillViewport="true">
 
 
