Update dos layout's das Activity dos inversores;

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -107,6 +107,7 @@
             android:layout_width="0dp"
             android:layout_height="57dp"
             android:hint="@string/hint_nome_login"
+            android:orientation="horizontal"
             android:textColorHint="@android:color/background_dark"
             app:layout_constraintBottom_toTopOf="@+id/guideline15"
             app:layout_constraintEnd_toEndOf="parent"
@@ -139,6 +140,7 @@
             android:layout_width="0dp"
             android:layout_height="51dp"
             android:hint="@string/hint_cont_login"
+            android:orientation="horizontal"
             android:textColorHint="@android:color/black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/iwfigure2"
@@ -168,6 +170,7 @@
             android:layout_width="0dp"
             android:layout_height="43dp"
             android:hint="@string/digite_o_seu_e_mail"
+            android:orientation="horizontal"
             android:textColorHint="@android:color/background_dark"
             app:layout_constraintBottom_toTopOf="@+id/guideline16"
             app:layout_constraintEnd_toEndOf="parent"
