--- a/app/src/main/res/layout/activity_main2_dados_inversor.xml
+++ b/app/src/main/res/layout/activity_main2_dados_inversor.xml
@@ -17,19 +17,19 @@
         <TextView
             android:id="@+id/textView5"
             android:layout_width="0dp"
-            android:layout_height="33dp"
+            android:layout_height="0dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
             android:text="@string/titulo_txt_inv"
             android:textAlignment="center"
             android:textColor="@android:color/black"
             android:textSize="24sp"
+            app:layout_constraintBottom_toTopOf="@+id/guideline19"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
 
         <Button
             android:id="@+id/bt_inversor2"
@@ -71,7 +71,7 @@
             android:layout_marginBottom="16dp"
             android:layout_marginTop="16dp"
             android:hint="@string/Md_txt_inv"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:textColorHint="@android:color/black"
             app:layout_constraintBottom_toTopOf="@+id/TinputLayPotNominal"
             app:layout_constraintEnd_toEndOf="parent"
@@ -101,13 +101,14 @@
         <android.support.design.widget.TextInputLayout
             android:id="@+id/TinputLayPotNominal"
             android:layout_width="0dp"
-            android:layout_height="35dp"
+            android:layout_height="0dp"
             android:hint="@string/pot_txt_nom"
             android:orientation="horizontal"
             android:textColorHint="@android:color/black"
+            app:layout_constraintBottom_toTopOf="@+id/guideline20"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            tools:layout_editor_absoluteY="91dp"
+            app:layout_constraintTop_toTopOf="@+id/guideline21"
             tools:ignore="MissingConstraints">
 
             <EditText
@@ -131,15 +132,15 @@
         <android.support.design.widget.TextInputLayout
             android:id="@+id/TinputLayMPPTmenor"
             android:layout_width="0dp"
-            android:layout_height="35dp"
-            android:layout_marginTop="16dp"
+            android:layout_height="38dp"
             android:hint="@string/txt_menor_mppt"
             android:orientation="horizontal"
             android:textColorHint="@android:color/black"
+            app:layout_constraintBottom_toTopOf="@+id/guideline23"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/TinputLayNumTracMPPT">
+            app:layout_constraintTop_toTopOf="@+id/guideline22">
 
             <EditText
                 android:id="@+id/idmenor_mppt"
@@ -161,14 +162,16 @@
         <android.support.design.widget.TextInputLayout
             android:id="@+id/TinputLayNumTracMPPT"
             android:layout_width="0dp"
-            android:layout_height="35dp"
-            android:layout_marginTop="16dp"
+            android:layout_height="38dp"
             android:hint="@string/num_txt_mppt_trac"
             android:orientation="horizontal"
             android:textColorHint="@android:color/black"
+            app:layout_constraintBottom_toTopOf="@+id/guideline22"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/TinputLayPotNominal">
+            app:layout_constraintTop_toTopOf="@+id/guideline20"
+            app:layout_constraintVertical_bias="0.0">
 
             <EditText
                 android:id="@+id/idnumTracMPPT"
@@ -191,14 +194,14 @@
         <android.support.design.widget.TextInputLayout
             android:id="@+id/TinputLayMaiorMPPT"
             android:layout_width="0dp"
-            android:layout_height="35dp"
-            android:layout_marginTop="16dp"
+            android:layout_height="43dp"
             android:hint="@string/maior_mppt_txt"
             android:orientation="horizontal"
             android:textColorHint="@android:color/black"
+            app:layout_constraintBottom_toTopOf="@+id/guideline24"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/TinputLayMPPTmenor">
+            app:layout_constraintTop_toTopOf="@+id/guideline23">
 
             <EditText
                 android:id="@+id/et_maiorMPPT"
@@ -222,11 +225,12 @@
         <android.support.design.widget.TextInputLayout
             android:id="@+id/TinputLayCoefiMPPT"
             android:layout_width="0dp"
-            android:layout_height="35dp"
+            android:layout_height="0dp"
             android:layout_marginTop="16dp"
             android:hint="@string/Coe_txt_MPPT"
             android:orientation="horizontal"
             android:textColorHint="@android:color/black"
+            app:layout_constraintBottom_toTopOf="@+id/guideline25"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/TinputLayMaiorMPPT">
@@ -252,9 +256,9 @@
         <android.support.design.widget.TextInputLayout
             android:id="@+id/TinputLayCorrenteMax"
             android:layout_width="0dp"
-            android:layout_height="35dp"
+            android:layout_height="34dp"
             android:layout_marginBottom="8dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="8dp"
             android:hint="@string/corre_txt_max_string"
             android:orientation="horizontal"
             android:textColorHint="@android:color/black"
@@ -262,8 +266,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/TinputLayCoefiMPPT"
-            app:layout_constraintVertical_bias="0.187">
+            app:layout_constraintTop_toTopOf="@+id/guideline25">
 
             <EditText
                 android:id="@+id/IdcorrenteMaxStr"
@@ -294,6 +297,7 @@
             android:id="@+id/imageView2"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:contentDescription="@string/todo"
             android:scaleType="centerCrop"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -301,8 +305,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/guideline17"
             app:layout_constraintVertical_bias="0.0"
-            app:srcCompat="@drawable/inversor"
-            android:contentDescription="@string/todo" />
+            app:srcCompat="@drawable/inversor" />
 
         <android.support.constraint.Guideline
             android:id="@+id/guideline18"
@@ -310,6 +313,55 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.5" />
+
+        <android.support.constraint.Guideline
+            android:id="@+id/guideline19"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.09" />
+
+        <android.support.constraint.Guideline
+            android:id="@+id/guideline20"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.29" />
+
+        <android.support.constraint.Guideline
+            android:id="@+id/guideline21"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.19" />
+
+        <android.support.constraint.Guideline
+            android:id="@+id/guideline22"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_begin="174dp" />
+
+        <android.support.constraint.Guideline
+            android:id="@+id/guideline23"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.44" />
+
+        <android.support.constraint.Guideline
+            android:id="@+id/guideline24"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.58" />
+
+        <android.support.constraint.Guideline
+            android:id="@+id/guideline25"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.67" />
 
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
