--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -99,8 +99,7 @@
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/iwfigure2"
-            app:layout_constraintTop_toBottomOf="@+id/TextInputLayoutContaLuz"
-            />
+            app:layout_constraintTop_toBottomOf="@+id/TextInputLayoutContaLuz" />
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/TextInputLayoutNome"
@@ -242,20 +241,20 @@
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
+            android:contentDescription="@string/todo"
             android:scaleType="centerCrop"
             app:layout_constraintBottom_toTopOf="@+id/guideline14"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/selecao002"
-            android:contentDescription="@string/todo" />
+            app:srcCompat="@drawable/selecao002" />
 
         <android.support.constraint.Guideline
             android:id="@+id/guideline14"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.15" />
+            app:layout_constraintGuide_percent="0.2" />
 
         <android.support.constraint.Guideline
             android:id="@+id/guideline15"
@@ -270,6 +269,23 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.58" />
+
+        <Button
+            android:id="@+id/btnorma"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:text="Norma"
+            app:layout_constraintBottom_toTopOf="@+id/guideline10"
+            app:layout_constraintEnd_toStartOf="@+id/guideline12"
+            app:layout_constraintStart_toStartOf="@+id/guideline11"
+            app:layout_constraintTop_toTopOf="@+id/guideline2" />
+
+        <android.support.constraint.Guideline
+            android:id="@+id/guideline2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.73" />
 
     </android.support.constraint.ConstraintLayout>
     </ScrollView>
